# 6502

./: .gitignore  CMakeLists.txt  a  build.sh  build_apk  build_apk_termux.sh  build_gtk_apk_termux.sh  build_imgui_fonts_ndk_termux.sh  build_ndk_termux.sh  build_root.cmake  build_termux.sh  enter_build_environment.sh  enter_ndk_env.sh  enter_nix.sh  install_apk.sh  install_hexabyte.sh  java  keystone-build-android.sh  ndk_profile.sh  rebuild.sh  run_cli.sh  run_cli_ndk_termux.sh  run_cli_termux.sh  test_termux.sh
.github/workflows/: build.yml
apk/: gradle.properties
apk/app/: build.gradle.kts
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/java/app/zlangjit/: IRCService.java  MainActivity.java
apk/app/src/main/java/com/frogobox/githubaction/: MainActivity.kt
apk/app/src/main/java/com/rogerboesch/opengltutorial/: AssetManager.kt  IRCService.java  MainActivity.kt  MyService.kt  notifications.kt
apk/app/src/main/java/smallville7123/EGLSurfaceView_EGLTextureView/: EGLSurfaceView.java  EGLTextureView.java
apk/app/src/main/java/smallville7123/graphical/tool/kit/: DiligentEngineView.java
apk/app/src/main/res/values/: themes.xml
apk/app/src/main/res/values-night/: themes.xml
apk_tmp/app/: build.gradle
apk_tmp_1/: settings.gradle.kts
apk_tmp_1/buildSrc/src/main/kotlin/: ProjectSetting.kt
capstone/: CMakeLists.txt
capstone/suite/cstest/: CMakeLists.txt
cli/: CMakeLists.txt  handlemap.c  main.cpp  main2.cpp  simplelock.c  simplelock.h  simplethread.c  simplethread.h  ui.c  ui.cpp
cli/ftxui/: CMakeLists.txt
cli/ftxui/doc/: CMakeLists.txt
cli/ftxui/examples/: CMakeLists.txt
cli/ftxui/examples/component/: composition.cpp
cli/ftxui/include/ftxui/component/: screen_interactive.hpp
cli/ftxui/src/ftxui/component/: screen_interactive.cpp
cli/include/: handlemap.h
cli/nanovg/include/: nanovg.h  nanovg_gl.h
cli/x65/: x65.cpp
flanterm/: flanterm.c  flanterm_fb.c  flanterm_fb.h
harfbuzz-ft/freetype/: CMakeLists.txt
imgui_fonts/: CMakeLists.txt
jni/: CMakeLists.txt  compositor.c  jni.cpp  libegl.cpp
jni/AppInstance/: AppInstance.cpp  native-lib-nanovgXC.cpp  native-lib.cpp
jni/MultiTouch/: CMakeLists.txt  MultiTouch.cpp
jni/MultiTouch/Utils/: MemoryAllocator.h
jni/game/: Cube3D.hpp  Pong.hpp
keystone/: CMakeLists.txt
keystone/llvm/include/llvm/ADT/: DenseMap.h
nanovgXC/: Makefile
nanovgXC/src/: nanovg.c
src/: CMakeLists.txt
tmp_etc/: hardware-configuration.nix
vrEmu6502/: CMakeLists.txt  default.nix
vrEmu6502/src/: CMakeLists.txt  vrEmu6502.c
