cmake_minimum_required(VERSION 3.18.8)

include(CheckSymbolExists)

if(UNIX AND ANDROID)
  add_executable(executable__emu_main_cli.so main2.cpp)
  target_link_libraries(executable__emu_main_cli.so PRIVATE emu_main EGL GLESv3 log)
elseif(UNIX AND NOT ANDROID)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE emu_main EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
elseif(WINDOWS)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE emu_main EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
elseif(APPLE)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE emu_main EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
else()
  message(STATUS_FATAL "unknown platform")
endif()
