cmake_minimum_required(VERSION 3.18.8)

include(CheckSymbolExists)

add_library(common INTERFACE)
target_link_libraries(common INTERFACE vrEmu6502)

if(UNIX AND ANDROID)
  add_executable(executable__x65.so x65/x65.cpp)
  add_executable(executable__emu_main_cli.so main2.cpp)
  target_link_libraries(executable__emu_main_cli.so PRIVATE common EGL GLESv3 log)
elseif(UNIX AND NOT ANDROID)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE common EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
elseif(WINDOWS)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE common EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
elseif(APPLE)
  add_executable(emu_main_cli)
  target_sources(emu_main_cli PRIVATE main2.cpp)
  target_link_libraries(emu_main_cli PRIVATE common EGL GLESv3)
  install(TARGETS emu_main_cli DESTINATION bin)
else()
  message(STATUS_FATAL "unknown platform")
endif()
